# fin_price

./: .gitignore  Cargo.toml  README.md  pyproject.toml
app/: main.py
app/assets/: style.css
app/components/: layout.py
app/pages/: bs_pricer.py  index_options.py  vix_pricer.py  vol_surface.py
notebooks/: 01_cont_kokholm_replication.ipynb  black_scoles_model.ipynb  pricing_vix_options_v0.3.ipynb
rust/src/: lib.rs
src/: __init__.py
src/docs/: model_details.md
src/finpricing/: __init__.py  _sim.pyi  base.py  parameters.py
src/finpricing/calibration/: __init__.py  base.py  cont_kokholm.py
src/finpricing/core/: base.py
src/finpricing/data/: __init__.py  fixtures.py
src/finpricing/models/: __init__.py  base.py  black_scholes_models.py  bs.py  characteristic_functions.py  fourier_pricing.py  implied_volatility.py  jump_diffusion.py
src/finpricing/models/black_scholes/: __init__.py  black_scholes_models.py  implied_volatility.py
src/finpricing/models/jump_diffusion/: __init__.py  jump_diffusion.py
src/finpricing/models/vix/: __init__.py  model.py  pricing.py  utils.py
src/finpricing/utils/: __init__.py  bs_utils.py  characteristic_functions.py  fourier.py  fp_utils.py  math_utils.py
tests/: test_black_scholes.py  test_vix_model.py
