[package]
name = "finpricing-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "_sim"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3  = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rand  = "0.8"
rand_distr = "0.4"
rayon = "1.10"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
