[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finpricing"
version = "0.1.0"
description = "Financial derivatives pricing library: Cont-Kokholm, Black-Scholes, jump-diffusion models"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
app = [
    "dash>=2.17",
    "plotly>=5.22",
    "pandas>=2.2",
]
ml = [
    "torch>=2.3",
    "torchsde>=0.2",
    "gpytorch>=1.12",
]
notebook = [
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "nbformat>=5.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "maturin>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finpricing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# Rust extension — build with: maturin develop --release
# The compiled _sim.so drops into src/finpricing/ automatically.
# Pure-Python fallback is used automatically when the extension is absent.
[tool.maturin]
python-source = "src"
module-name   = "finpricing._sim"
bindings      = "pyo3"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
